finally fixes header-social alignment!

--- a/it161/fp/css/main.css
+++ b/it161/fp/css/main.css
@@ -135,7 +135,7 @@ header {
     width: 100%;
     height: 161px; 
     display: grid;
-    grid-template-columns: 120px 1fr 251px;
+    grid-template-columns: 120px 0.90fr 251px;
     grid-template-rows: 94px 39px;
     gap: 0px 0px;
     grid-template-areas: 
